--- a/Camera/style.css
+++ b/Camera/style.css
@@ -34,13 +34,13 @@ video{
     color:black;
     flex-direction:column; 
     justify-content: space-between;
+    z-index:5;
 
 }
 
 .action-cont > * {
     width:70%;
     height: 3rem;
- 
     border-radius:50%;  
     border: 5px solid black;
     display:flex;
@@ -113,6 +113,51 @@ border-radius:50%;
     display:none;
 }
 
+.filter-cont {
+    position :absolute;
+    top:calc((100vh - 16rem) /2);
+    left:0;
+    height:16rem;
+    width:5rem;
+    background-color:aqua;
+    z-index:2;
+}
+
+.filter{
+    height:4rem;
+    background-image:url("https://picsum.photos/seed/picsum/200/300");
+    background-position:center;
+    background-size:100% 100%;
+    background-repeat:no-repeat;
+    background-color:#ffa50052;
+    background-blend-mode:color-burn;
+}
+
+.orange{
+    background-color:#ffa50052;
+}
+
+.brown{
+    background-color:#a52a2a59;
+}
+
+.pink{
+    background-color: #ffc0cba9;
+}
+
+.transparent {
+    background-color:transparent;
+}
+
+.filter-layer{
+    position: absolute;
+    top:0;
+    left:0;
+    height:100vh;
+    width:100vw;
+    z-index:1;
+
+}
 
 
 
