--- a/Camera/gallery.css
+++ b/Camera/gallery.css
@@ -30,20 +30,51 @@ body{
     background-color:lightblue;
     height:100vh;
     width:100vw;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
 }
 
 .media-cont{
     height:15rem;
     width:15rem;
     border:10px solid white;
-    background-color:lightgreen;
+    margin:2rem;
 
 }
 
+.media{
+    height:calc(100% - 2rem - 2rem);
+    
+    
+}
+
+.media > *{
+    width:100%;
+    height:100%;
+    
+    object-fit:fill;
+}
+
+.action-btn{
+    height:2rem;
+    color:white;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.action-btn:hover{
+    cursor: pointer;
+}
+
 .download{
-    height:2reml
+   
     background-color:black;
 
 }
 
 .delete
+{
+    background-color:rgb(223,43,43);
+}
